welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:0: error: ')' expected but '}' found.
class ColumnByColumn extends SimpleBuggle {def finpos():Boolean = {return ((getMondeHauteur()-1 == getX() && (getMondeLargeur() -1== getY()))}
                                                                                                                                             ^